--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "jest"
   },
   "author": "Pascal Gagneur",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "xml2js": "^0.4.17"
+  }
 }
